--- a/todo-app/src/components/TodoListItem.scss
+++ b/todo-app/src/components/TodoListItem.scss
@@ -2,9 +2,7 @@
   padding: 1rem;
   display: flex;
   align-items: center;
-  &:nth-child(even) {
-    background: #f8f9fa;
-  }
+
   .checkbox {
     cursor: pointer;
     flex: 1; //차지할수 있는영역 전부 차지
@@ -42,7 +40,12 @@
   }
 
   //element사이에 테두리 넣기
-  & + & {
-    border-top: 1px solid #dee2e6;
+  .TodoListItem-virtualized {
+    & + & {
+      border-top: 1px solid #dee2e6;
+    }
+    &:nth-child(even) {
+      background: #f8f9fa;
+    }
   }
 }
